# preference-assignment-optimizer

./: .gitignore  LICENSE  README.md  data_loader copy.py  project_assignment.ipynb  pyproject.toml
data/: mock_preferences.csv
src/: app.py  app_cli.py  data_loader.py  main.py  output.py  solver.py  types.py
src/app/: __init__.py  cli.py  streamlit.py
src/app/components/: __init__.py  explorer.py  results.py  solver_controls.py
src/app/utils/: __init__.py  analytics.py  visualizations.py
tests/: test_data_loader.py  test_main.py  test_solver.py
