[project]
name = "preference-assignment-optimizer"
version = "0.1.0"
description = "Student-project assignment optimizer using Binary Integer Programming"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Pini Koplovitch", email = "pini.koplovitch@gmail.com" }
]
license = { text = "MIT" }
keywords = ["optimization", "assignment", "preferences", "binary-integer-programming"]
dependencies = [
    "pandas>=2.0.0,<3",
    "plotly>=6.5.2",
    "pulp>=3.3.0",
    "streamlit>=1.40.0",
    "typer>=0.21.1",
]

[project.scripts]
preference-optimizer = "src.main:app"
preference-optimizer-app = "src.app.cli:main"

[project.urls]
Repository = "https://github.com/pinikop/preference-assignment-optimizer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
